[package]
name = "floralcraft_terrain"
version = "0.1.0"
edition = "2024"

[dependencies]
palette_bitmap = { git = "https://github.com/penguinawesome1/palette_bitmap.git", branch = "main", features = [
  "serde",
] }
glam = { version = "0.30.4", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
itertools = "0.14.0"
toml = "0.8.23"
thiserror = "2.0.12"
indexmap = { version = "2.10.0", features = ["serde"] }
