[package]
name = "floralcraft_terrain"
version = "0.1.0"
edition = "2024"

[dependencies]
chroma = { git = "https://github.com/penguinawesome1/chroma.git", tag = "v0.1.0", features = ["serde"] }
glam = { version = "0.30.4", features = ["serde"] }
itertools = "0.14.0"
thiserror = "2.0.12"
ahash = "0.8.12"
bincode = { version = "2.0.1", features = ["derive", "serde"] }
serde = { version = "1.0.219", features = ["derive"] }
paste = "1.0.15"
